--- a/week2/FragmentExample/app/src/main/res/layout/activity_main.xml
+++ b/week2/FragmentExample/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
@@ -17,8 +18,12 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
     </FrameLayout>
 
-
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.example.fragmentexample.BlankFragment3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 </LinearLayout>
